--- a/server/plugins/VipSystem/config.yml
+++ b/server/plugins/VipSystem/config.yml
@@ -1,10 +1,11 @@
 VipSystem:
-  DefaultGroup: Builder
+  DefaultGroup: default
+  DatabaseType: mysql
   VIPGroups:
-  - VIP1
-  - VIP2
-  - VIP3
-  - VIP4
+  - vip1
+  - vip2
+  - vip3
+  - vip4
   VIPGroupsName:
   - 初级会员
   - 中级会员
