--- a/server/plugins/PlayerPoints/localization.yml
+++ b/server/plugins/PlayerPoints/localization.yml
@@ -1,44 +1,44 @@
 message:
-  noPermission: '&7%tag &cLack permission: &b%extra'
-  noConsole: '&7%tag &cCannot use command as console'
-  notIntenger: '&7%tag &6%extra &cis not an integer'
-  reload: '&7%tag &6Configuration reloaded'
-  broadcast: '&7%tag &9Player &a%player &9has &a%amount &9Points'
+  noPermission: '&e[点券系统] &c你没有权限这么做'
+  noConsole: '&e[点券系统] &c控制台无法使用该命令'
+  notIntenger: '&e[点券系统] &6%extra &c不是一个整数'
+  reload: '&e[点券系统] &6配置文件已经重载'
+  broadcast: '&e[点券系统] &9玩家 &a%player &9拥有 &a%amount &9点券'
   command:
-    unknown: '&7%tag &cUnknown command ''%extra'''
-    give: '&7%tag &9/points give <name> <points>'
-    giveall: '&7%tag &9/points giveall <points>'
-    take: '&7%tag &9/points take <name> <points>'
-    look: '&7%tag &9/points look <name>'
-    pay: '&7%tag &9/points give <name> <points>'
-    set: '&7%tag &9/points set <name> <points>'
-    reset: '&7%tag &9/points reset <name>'
-    me: '&7%tag &9/points me'
-    lead: '&7%tag &9/points lead [next|prev|#]'
-    broadcast: '&7%tag &9/points broadcast <name>'
+    unknown: '&e[点券系统] &c未知命令：''%extra'''
+    give: '&e[点券系统] &9/points give <name> <points>'
+    giveall: '&e[点券系统] &9/points giveall <points>'
+    take: '&e[点券系统] &9/points take <name> <points>'
+    look: '&e[点券系统] &9/points look <name>'
+    pay: '&e[点券系统] &9/points pay <name> <points>'
+    set: '&e[点券系统] &9/points set <name> <points>'
+    reset: '&e[点券系统] &9/points reset <name>'
+    me: '&e[点券系统] &9/points me'
+    lead: '&e[点券系统] &9/points lead [next|prev|#]'
+    broadcast: '&e[点券系统] &9/points broadcast <name>'
   points:
-    success: '&7%tag &9Player &a%player &9now has &a%amount &9Points'
-    successall: '&7%tag Gave &a%amount &9Points &7to %player players'
-    fail: '&7%tag &cTransaction failed'
-    failall: '&7%tag &cFailed to give &a%amount &9Points &cto %player players'
-    look: '&7%tag &9Player &a%player &9has &a%amount &9Points'
+    success: '&e[点券系统] &9玩家 &a%player &9目前有 &a%amount &9点券'
+    successall: '&e[点券系统] 给予 &a%amount &9点券 &e给玩家 %player '
+    fail: '&e[点券系统] &c交易失败'
+    failall: '&e[点券系统] &c给予玩家&a%player&d%amount&c点券失败'
+    look: '&e[点券系统] &9玩家 &a%player &9有 &a%amount &9点券'
     pay:
-      send: '&7%tag &9You have sent &a%amount &9Points to &a%player'
-      receive: '&7%tag &9You have received &a%amount &9Points from &a%player'
-      invalid: '&7%tag &6Cannot pay 0 or negative points.'
-    lack: '&7%tag &6You do not have enough Points!'
-    reset: '&7%tag The points of &a%player &9was successfully reset'
-    me: '&7%tag &9You have &a%amount &9Points'
+      send: '&e[点券系统] &9你发送了 &a%amount &9点券给 &a%player'
+      receive: '&e[点券系统] &9你从 &a%player &9那收到了 &a%amount &9点券'
+      invalid: '&e[点券系统] &6无法给0点券或负数点券'
+    lack: '&e[点券系统] &6你没有足够的点券'
+    reset: '&e[点券系统] &a%player &9的点券已被重置'
+    me: '&e[点券系统] &9你有 &a%amount &9点券'
   help:
-    header: '&9======= &7%tag &9======='
-    me: '&7/points me &6: Show current points'
-    give: '&7/points give <name> <points> &6: Generate points for given player'
-    giveall: '&7/points giveall <points> &6: Generate points for online players'
-    take: '&7/points take <name> <points> &6: Take points from player'
-    look: '&7/points look <name> &6: Lookup player''s points'
-    set: '&7/points set <name> <points> &6: Set player''s points to amount'
-    reset: '&7/points reset <name> &6: Reset player''s points to 0'
-    pay: '&7/points pay <name> <points> &6: Send points to given player'
-    lead: '&7/points lead [prev/next/page] &6: Leader board'
-    broadcast: '&7/points broadcast <name> &6: Broadcast player''s points'
-    reload: '&7/points reload &6: Reload config'
+    header: '&9======= &e[点券系统] &9======='
+    me: '&e/points me &6: 查看自己的点券'
+    give: '&e/points give <name> <points> &6: 给予某玩家点券'
+    giveall: '&e/points giveall <points> &6: 给予所有在线玩家点券'
+    take: '&e/points take <name> <points> &6: 减少某玩家点券'
+    look: '&e/points look <name> &6: 查询某玩家的点券'
+    set: '&e/points set <name> <points> &6: 设置某玩家的点券数量'
+    reset: '&e/points reset <name> &6: 设置某玩家的点券为0'
+    pay: '&e/points pay <name> <points> &6: 将点券付给某玩家'
+    lead: '&e/points lead [prev/next/page] &6: 点券排行榜'
+    broadcast: '&e/points broadcast <name> &6: 服务器公告某玩家的点券'
+    reload: '&e/points reload &6: 重载配置文件'
