--- a/server/plugins/Scoreboard-revision/settings.yml
+++ b/server/plugins/Scoreboard-revision/settings.yml
@@ -34,13 +34,13 @@ board:
       liner:
       - '&c-----------------'
     2:
-      interval: 80
+      interval: 200
       liner:
-      - '&c昵称:'
+      - '&6%vipSystem_vipGroup%'
     3:
-      interval: 80
+      interval: 1200
       liner:
-      - '%player_name%'
+      - '&2%vipSystem_leftTime%'
     4:
       interval: 80
       liner:
@@ -60,7 +60,7 @@ board:
     '8':
       interval: 80
       liner:
-      - '&c在线时间:'
+      - '&c服务器时间:'
     '9':
       interval: 20
       liner:
