--- a/server/plugins/ItemsAdder/storage/items_ids_cache.yml
+++ b/server/plugins/ItemsAdder/storage/items_ids_cache.yml
@@ -485,6 +485,7 @@ DIAMOND_AXE:
   mjy:mietianxieyan_stick: 10
   mjy:shuihuo_sword: 11
   mjy:leidian_axe: 12
+  mjy:tiaozhanzhe_axe: 13
 WOODEN_AXE:
   itemsadder:crystal_axe: 1
 DIAMOND_PICKAXE:
