--- a/server/plugins/DungeonsXL/data.yml
+++ b/server/plugins/DungeonsXL/data.yml
@@ -1,1 +1,25 @@
 configVersion: 2
+protections:
+  gameSigns:
+    world:
+      '1':
+        x: 46
+        y: 76
+        z: 93
+        dungeon: test
+        maxElements: 4
+  groupSigns:
+    world:
+      '1':
+        x: 48
+        y: 76
+        z: 93
+        dungeon: test
+        maxElements: 4
+        groupName: '2'
+  leaveSigns:
+    world:
+      '1':
+        x: 44
+        y: 76
+        z: 93
