--- a/server/plugins/AmazingFishing/Data.yml
+++ b/server/plugins/AmazingFishing/Data.yml
@@ -1,9 +1,9 @@
 FishOfDay:
-  Type: Salmon
-  Name: '0'
-  Bonus: 2
+  Type: Cod
+  Name: '2'
+  Bonus: 9
 Players:
   BiShop:
-    AFK: 1585678624471
+    AFK: 1585696870791
   Test:
-    AFK: 1585676234029
+    AFK: 1585695005981
