--- a/server/spigot.yml
+++ b/server/spigot.yml
@@ -20,7 +20,7 @@ settings:
   player-shuffle: 0
   timeout-time: 60
   restart-on-crash: true
-  restart-script: ./start.sh
+  restart-script: runDev.bat
   user-cache-size: 1000
   bungeecord: false
   netty-threads: 4
