--- a/server/plugins/WorldGuard/config.yml
+++ b/server/plugins/WorldGuard/config.yml
@@ -4,11 +4,11 @@ regions:
         keep-names-that-lack-uuids: true
     use-creature-spawn-event: true
     sql:
-        use: false
-        dsn: jdbc:mysql://localhost/worldguard
-        username: worldguard
-        password: worldguard
-        table-prefix: ''
+        use: true
+        dsn: jdbc:mysql://localhost/minecraft
+        username: root
+        password: mjy159357
+        table-prefix: world_guard_
     use-paper-entity-origin: false
     enable: true
     invincibility-removes-mobs: false
@@ -39,7 +39,7 @@ summary-on-start: true
 op-permissions: true
 build-permission-nodes:
     enable: false
-    deny-message: '&eSorry, but you are not permitted to do that here.'
+    deny-message: '&e你不被允许这么做.'
 event-handling:
     block-entity-spawns-with-untraceable-cause: false
     interaction-whitelist: []
@@ -69,36 +69,36 @@ physics:
     allow-portal-anywhere: false
     disable-water-damage-blocks: []
 ignition:
-    block-tnt: false
-    block-tnt-block-damage: false
-    block-lighter: false
+    block-tnt: true
+    block-tnt-block-damage: true
+    block-lighter: true
 fire:
-    disable-lava-fire-spread: false
-    disable-all-fire-spread: false
+    disable-lava-fire-spread: true
+    disable-all-fire-spread: true
     disable-fire-spread-blocks: []
     lava-spread-blocks: []
 mobs:
-    block-creeper-explosions: false
-    block-creeper-block-damage: false
-    block-wither-explosions: false
-    block-wither-block-damage: false
-    block-wither-skull-explosions: false
-    block-wither-skull-block-damage: false
-    block-enderdragon-block-damage: false
-    block-enderdragon-portal-creation: false
-    block-fireball-explosions: false
-    block-fireball-block-damage: false
+    block-creeper-explosions: true
+    block-creeper-block-damage: true
+    block-wither-explosions: true
+    block-wither-block-damage: true
+    block-wither-skull-explosions: true
+    block-wither-skull-block-damage: true
+    block-enderdragon-block-damage: true
+    block-enderdragon-portal-creation: true
+    block-fireball-explosions: true
+    block-fireball-block-damage: true
     anti-wolf-dumbness: false
     allow-tamed-spawns: true
-    disable-enderman-griefing: false
-    disable-snowman-trails: false
-    block-painting-destroy: false
-    block-item-frame-destroy: false
-    block-armor-stand-destroy: false
+    disable-enderman-griefing: true
+    disable-snowman-trails: true
+    block-painting-destroy: true
+    block-item-frame-destroy: true
+    block-armor-stand-destroy: true
     block-plugin-spawning: true
     block-above-ground-slimes: false
-    block-other-explosions: false
-    block-zombie-door-destruction: false
+    block-other-explosions: true
+    block-zombie-door-destruction: true
     block-creature-spawn: []
 player-damage:
     disable-fall-damage: false
