--- a/server/plugins/Multiverse-Core/worlds.yml
+++ b/server/plugins/Multiverse-Core/worlds.yml
@@ -1,15 +1,62 @@
 worlds:
+  world_the_end:
+    ==: MVWorld
+    hidden: 'false'
+    alias: 末地
+    color: WHITE
+    style: NORMAL
+    pvp: 'true'
+    scale: '16.0'
+    respawnWorld: ''
+    allowWeather: 'true'
+    difficulty: HARD
+    spawning:
+      ==: MVSpawnSettings
+      animals:
+        ==: MVSpawnSubSettings
+        spawn: 'true'
+        spawnrate: '-1'
+        exceptions: []
+      monsters:
+        ==: MVSpawnSubSettings
+        spawn: 'true'
+        spawnrate: '-1'
+        exceptions: []
+    entryfee:
+      ==: MVEntryFee
+      amount: '0.0'
+    hunger: 'true'
+    autoHeal: 'true'
+    adjustSpawn: 'true'
+    portalForm: ALL
+    gameMode: SURVIVAL
+    keepSpawnInMemory: 'true'
+    spawnLocation:
+      ==: MVSpawnLocation
+      x: -89.8115444839783
+      y: 58.0
+      z: -38.597209421814725
+      pitch: 2.8500066
+      yaw: -88.49841
+    autoLoad: 'true'
+    bedRespawn: 'true'
+    worldBlacklist: []
+    environment: THE_END
+    seed: '7617890583348627153'
+    generator: 'null'
+    playerLimit: '-1'
+    allowFlight: 'false'
   world:
     ==: MVWorld
     hidden: 'false'
-    alias: ''
+    alias: 主世界
     color: WHITE
     style: NORMAL
     pvp: 'true'
     scale: '1.0'
     respawnWorld: ''
     allowWeather: 'true'
-    difficulty: EASY
+    difficulty: HARD
     spawning:
       ==: MVSpawnSettings
       animals:
@@ -45,65 +92,18 @@ worlds:
     seed: '7617890583348627153'
     generator: 'null'
     playerLimit: '-1'
-    allowFlight: 'true'
-  world_the_end:
-    ==: MVWorld
-    hidden: 'false'
-    alias: ''
-    color: WHITE
-    style: NORMAL
-    pvp: 'true'
-    scale: '16.0'
-    respawnWorld: ''
-    allowWeather: 'true'
-    difficulty: EASY
-    spawning:
-      ==: MVSpawnSettings
-      animals:
-        ==: MVSpawnSubSettings
-        spawn: 'true'
-        spawnrate: '-1'
-        exceptions: []
-      monsters:
-        ==: MVSpawnSubSettings
-        spawn: 'true'
-        spawnrate: '-1'
-        exceptions: []
-    entryfee:
-      ==: MVEntryFee
-      amount: '0.0'
-    hunger: 'true'
-    autoHeal: 'true'
-    adjustSpawn: 'true'
-    portalForm: ALL
-    gameMode: SURVIVAL
-    keepSpawnInMemory: 'true'
-    spawnLocation:
-      ==: MVSpawnLocation
-      x: -6.5
-      y: 58.0
-      z: -6.5
-      pitch: 0.0
-      yaw: 0.0
-    autoLoad: 'true'
-    bedRespawn: 'true'
-    worldBlacklist: []
-    environment: THE_END
-    seed: '7617890583348627153'
-    generator: 'null'
-    playerLimit: '-1'
-    allowFlight: 'true'
+    allowFlight: 'false'
   world_nether:
     ==: MVWorld
     hidden: 'false'
-    alias: ''
+    alias: 地狱
     color: WHITE
     style: NORMAL
     pvp: 'true'
     scale: '8.0'
     respawnWorld: ''
     allowWeather: 'true'
-    difficulty: EASY
+    difficulty: HARD
     spawning:
       ==: MVSpawnSettings
       animals:
@@ -127,11 +127,11 @@ worlds:
     keepSpawnInMemory: 'true'
     spawnLocation:
       ==: MVSpawnLocation
-      x: 0.0
-      y: 24.0
-      z: 0.0
-      pitch: 0.0
-      yaw: 0.0
+      x: 26.479322087736723
+      y: 44.0
+      z: 52.38965767830608
+      pitch: -4.0498586
+      yaw: -352.9486
     autoLoad: 'true'
     bedRespawn: 'true'
     worldBlacklist: []
@@ -139,4 +139,4 @@ worlds:
     seed: '7617890583348627153'
     generator: 'null'
     playerLimit: '-1'
-    allowFlight: 'true'
+    allowFlight: 'false'
