update server version to 1.15.2

--- a/server/plugins/Essentials/config.yml
+++ b/server/plugins/Essentials/config.yml
@@ -930,7 +930,7 @@ newbies:
 # Set this to lowest, if you want Multiverse to handle the respawning.
 # Set this to high, if you want EssentialsSpawn to handle the respawning.
 # Set this to highest, if you want to force EssentialsSpawn to handle the respawning.
-respawn-listener-priority: high
+respawn-listener-priority: lowest
 
 # What priority should we use for handling spawning on joining the server?
 # See respawn-listener-priority for possible values.
