--- a/server/paper.yml
+++ b/server/paper.yml
@@ -46,6 +46,7 @@ timings:
   hidden-config-entries:
   - database
   - settings.bungeecord-addresses
+  - settings.velocity-support.secret
   history-interval: 300
   history-length: 3600
   server-name: Unknown Server
@@ -59,6 +60,12 @@ messages:
     authentication-servers-down: ''
 world-settings:
   default:
+    seed-based-feature-search: true
+    portal-create-radius: 16
+    iron-golems-can-spawn-in-air: false
+    entities-target-with-follow-range: false
+    tracker-update-distance: 1.0
+    zombie-villager-infection-chance: -1.0
     keep-spawn-loaded-range: 10
     disable-ice-and-snow: false
     skeleton-horse-thunder-spawn-chance: 0.01
@@ -134,6 +141,7 @@ world-settings:
       impact-sound: -1
       flash: -1
     game-mechanics:
+      nerf-pigmen-from-nether-portals: false
       scan-for-legacy-ender-dragon: true
       shield-blocking-delay: 5
       disable-chest-cat-detection: false
@@ -143,6 +151,14 @@ world-settings:
       disable-relative-projectile-velocity: false
       disable-pillager-patrols: false
       disable-unloaded-chunk-enderpearl-exploit: true
+      pillager-patrols:
+        spawn-chance: 0.2
+        spawn-delay:
+          per-player: false
+          ticks: 12000
+        start:
+          per-player: false
+          day: 5
     max-growth-height:
       cactus: 3
       reeds: 3
