--- a/server/plugins/AmazingFishing/Data.yml
+++ b/server/plugins/AmazingFishing/Data.yml
@@ -1,9 +1,9 @@
 FishOfDay:
-  Type: TropicalFish
-  Name: '0'
-  Bonus: 7
+  Type: PufferFish
+  Name: '1'
+  Bonus: 8
 Players:
   BiShop:
-    AFK: 1585758651975
+    AFK: 1585778131419
   Test:
     AFK: 1585750478861
