--- a/server/spigot.yml
+++ b/server/spigot.yml
@@ -12,6 +12,7 @@
 
 config-version: 12
 settings:
+  log-villager-deaths: true
   debug: false
   save-user-cache-on-stop-only: false
   sample-count: 12
@@ -59,6 +60,7 @@ stats:
   forced-stats: {}
 world-settings:
   default:
+    trident-despawn-rate: 1200
     verbose: true
     view-distance: default
     dragon-death-sound-radius: 0
@@ -104,6 +106,7 @@ world-settings:
       sweetberry-modifier: 100
       kelp-modifier: 100
     entity-activation-range:
+      water: 16
       animals: 32
       monsters: 32
       raiders: 48
