--- a/server/plugins/DungeonsXL/data.yml
+++ b/server/plugins/DungeonsXL/data.yml
@@ -1,12 +1,33 @@
 configVersion: 2
 protections:
+  portals:
+    world:
+      '1':
+        loc1:
+          x: 42
+          y: 77
+          z: 94
+        loc2:
+          x: 39
+          y: 75
+          z: 94
+        material: WATER
+  groupSigns:
+    world:
+      '1':
+        x: 48
+        y: 76
+        z: 93
+        dungeon: boss
+        maxElements: 4
+        groupName: boss1
   gameSigns:
     world:
       '1':
         x: 46
         y: 76
         z: 93
-        dungeon: test
+        dungeon: boss
         maxElements: 1
   leaveSigns:
     world:
@@ -14,12 +35,3 @@ protections:
         x: 44
         y: 76
         z: 93
-  groupSigns:
-    world:
-      '1':
-        x: 48
-        y: 76
-        z: 93
-        dungeon: test
-        maxElements: 4
-        groupName: BOSS挑战
