--- a/server/plugins/MythicMobs/config.yml
+++ b/server/plugins/MythicMobs/config.yml
@@ -21,7 +21,7 @@ Configuration:
     CustomSpawners: true
     RandomSpawning: true
   Mobs:
-    DespawnByDefault: false
+    DespawnByDefault: true
     EnableAIModifiers: true
     EnableTimerSkills: true
     EnableThreatTables: true
