--- a/server/plugins/AmazingFishing/Data.yml
+++ b/server/plugins/AmazingFishing/Data.yml
@@ -1,9 +1,9 @@
 FishOfDay:
-  Type: PufferFish
+  Type: TropicalFish
   Name: '0'
   Bonus: 2
 Players:
   BiShop:
-    AFK: 1585931723192
+    AFK: 1585951061173
   Test:
-    AFK: 1585928797506
+    AFK: 1585949965373
