--- a/server/plugins/WorldBoss/config.yml
+++ b/server/plugins/WorldBoss/config.yml
@@ -1,17 +1,18 @@
+minuteBefore: 10
 group1:
-  name: boss1
-  displayName: Boss No.1
-  startGameCmd: dxl play boss
-  day: 1
-  time: '01:00'
+  name: shiwang
+  displayName: 尸王
+  startGameCmd: dxl play shiwang
+  day: 5
+  time: '15:27'
 group2:
   name: boss2
   displayName: Boss No.2
-  startGameCmd: dxl play boss
-  time: '15:53'
+  startGameCmd: dxl play test
+  time: '15:27'
 group3:
   name: boss3
   displayName: Boss No.3
-  startGameCmd: dxl play boss
-  day: 3
-  time: '15:50'
+  startGameCmd: dxl play test
+  day: 1
+  time: '15:27'
