--- a/server/plugins/AmazingFishing/Data.yml
+++ b/server/plugins/AmazingFishing/Data.yml
@@ -1,9 +1,9 @@
 FishOfDay:
-  Type: Cod
-  Name: '0'
-  Bonus: 6
+  Type: Salmon
+  Name: '2'
+  Bonus: 2
 Players:
   BiShop:
-    AFK: 1585951061173
+    AFK: 1585959163362
   Test:
     AFK: 1585949965373
