--- a/server/server.properties
+++ b/server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Apr 03 16:20:07 MDT 2020
+#Fri Apr 03 18:03:43 MDT 2020
 spawn-protection=2
 max-tick-time=60000
 query.port=25565
@@ -20,7 +20,7 @@ snooper-enabled=true
 level-type=default
 hardcore=false
 enable-command-block=false
-max-players=20
+max-players=100
 network-compression-threshold=256
 resource-pack-sha1=
 max-world-size=29999984
@@ -32,16 +32,16 @@ server-ip=
 spawn-npcs=true
 allow-flight=false
 level-name=world
-view-distance=10
+view-distance=8
 resource-pack=
 spawn-animals=true
 white-list=false
 rcon.password=
 generate-structures=true
-max-build-height=256
 online-mode=false
+max-build-height=256
 level-seed=
-use-native-transport=true
 prevent-proxy-connections=false
+use-native-transport=true
+motd=Hunting World
 enable-rcon=false
-motd=A Minecraft Server
