--- a/server/plugins/Essentials/spawn.yml
+++ b/server/plugins/Essentials/spawn.yml
@@ -1,8 +1,8 @@
 spawns: 
   default: 
     world: world
-    x: 43.93181830428884
-    y: 73.0
-    z: 63.54870108594237
-    yaw: 182.59105
-    pitch: 19.629211
+    x: 107.55708691620322
+    y: 31.0
+    z: -107.41721523924285
+    yaw: -359.33057
+    pitch: 3.1174965
