--- a/server/plugins/Citizens/saves.yml
+++ b/server/plugins/Citizens/saves.yml
@@ -145,7 +145,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: inventory,equipment,gravity,lookclose,owner,spawned,scoreboardtrait,mounttrait,type,location
+    traitnames: scoreboardtrait,inventory,owner,location,type,spawned,equipment,lookclose,mounttrait,gravity
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
