--- a/server/plugins/Citizens/saves.yml
+++ b/server/plugins/Citizens/saves.yml
@@ -120,13 +120,13 @@ npc:
     traits:
       type: PLAYER
       location:
-        headYaw: 0.0
+        headYaw: -50.583843
         world: world
         x: '105.4995'
         y: '31.0'
         z: '-94.5414'
-        yaw: '0.0'
-        pitch: '11.2465'
+        yaw: '-50.5838'
+        pitch: '-43.4787'
       lookclose:
         range: '5.0'
         enabled: true
@@ -145,7 +145,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: scoreboardtrait,gravity,spawned,inventory,equipment,location,lookclose,owner,type,mounttrait
+    traitnames: owner,spawned,scoreboardtrait,equipment,lookclose,type,location,gravity,inventory,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -174,17 +174,17 @@ npc:
           '0': 0.0
           '1': 360.0
       location:
-        headYaw: 0.0
+        headYaw: 310.59332
         world: world
         x: '109.3527'
         y: '31.0'
         z: '-90.4392'
-        yaw: '0.0'
-        pitch: '4.521'
+        yaw: '310.5933'
+        pitch: '-45.977'
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: scoreboardtrait,spawned,gravity,inventory,location,equipment,lookclose,fishshop,owner,type,mounttrait
+    traitnames: spawned,owner,scoreboardtrait,equipment,lookclose,type,location,inventory,gravity,fishshop,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
