--- a/server/plugins/Citizens/saves.yml
+++ b/server/plugins/Citizens/saves.yml
@@ -120,13 +120,13 @@ npc:
     traits:
       type: PLAYER
       location:
-        headYaw: -19.234703
+        headYaw: 0.0
         world: world
         x: '105.4995'
         y: '31.0'
         z: '-94.5414'
-        yaw: '-19.2347'
-        pitch: '-12.098'
+        yaw: '0.0'
+        pitch: '0.0'
       lookclose:
         range: '5.0'
         enabled: true
@@ -145,7 +145,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: inventory,gravity,location,spawned,scoreboardtrait,owner,type,equipment,lookclose,mounttrait
+    traitnames: inventory,lookclose,spawned,equipment,gravity,owner,mounttrait,location,type,scoreboardtrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -174,17 +174,17 @@ npc:
           '0': 0.0
           '1': 360.0
       location:
-        headYaw: -329.1562
+        headYaw: 0.0
         world: world
         x: '109.3527'
         y: '31.0'
         z: '-90.4392'
-        yaw: '-329.1562'
-        pitch: '0.0'
+        yaw: '0.0'
+        pitch: '-3.9295'
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: inventory,gravity,location,fishshop,spawned,scoreboardtrait,owner,type,equipment,lookclose,mounttrait
+    traitnames: inventory,lookclose,spawned,equipment,fishshop,gravity,owner,mounttrait,location,type,scoreboardtrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
