--- a/server/plugins/Citizens/saves.yml
+++ b/server/plugins/Citizens/saves.yml
@@ -120,13 +120,13 @@ npc:
     traits:
       type: PLAYER
       location:
-        headYaw: 0.0
+        headYaw: -165.63593
         world: world
         x: '105.4995'
         y: '31.0'
         z: '-94.5414'
-        yaw: '0.0'
-        pitch: '0.0'
+        yaw: '-165.6359'
+        pitch: '4.9815'
       lookclose:
         range: '5.0'
         enabled: true
@@ -145,7 +145,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: inventory,lookclose,spawned,equipment,gravity,owner,mounttrait,location,type,scoreboardtrait
+    traitnames: lookclose,gravity,scoreboardtrait,type,owner,location,inventory,spawned,equipment,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -174,17 +174,17 @@ npc:
           '0': 0.0
           '1': 360.0
       location:
-        headYaw: 0.0
+        headYaw: -163.45102
         world: world
         x: '109.3527'
         y: '31.0'
         z: '-90.4392'
-        yaw: '0.0'
-        pitch: '-3.9295'
+        yaw: '-163.451'
+        pitch: '4.6437'
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: inventory,lookclose,spawned,equipment,fishshop,gravity,owner,mounttrait,location,type,scoreboardtrait
+    traitnames: fishshop,lookclose,gravity,scoreboardtrait,type,location,owner,spawned,inventory,equipment,mounttrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
